--- a/assets/vip76/css/main.css
+++ b/assets/vip76/css/main.css
@@ -1428,6 +1428,7 @@ img {
 .img-responsive {
   display: block;
   max-width: 100%;
+  height: auto;
 }
 
 .img-rounded {
@@ -1444,6 +1445,7 @@ img {
   transition: all 0.2s ease-in-out;
   display: inline-block;
   max-width: 100%;
+  height: auto;
 }
 
 .img-circle {
@@ -2176,7 +2178,7 @@ address {
     width: 16.66667%;
   }
   .col-sm-3 {
-    width: 28%;
+    width: 25%;
   }
   .col-sm-4 {
     width: 33.33333%;
@@ -2194,7 +2196,7 @@ address {
     width: 66.66667%;
   }
   .col-sm-9 {
-    width: 72%;
+    width: 75%;
   }
   .col-sm-10 {
     width: 83.33333%;
@@ -5227,6 +5229,7 @@ a.label:hover, a.label:focus {
 .thumbnail a > img {
   display: block;
   max-width: 100%;
+  height: auto;
   margin-right: auto;
   margin-left: auto;
 }
@@ -6027,6 +6030,7 @@ a.thumbnail.active {
 .carousel-inner > .item > a > img {
   display: block;
   max-width: 100%;
+  height: auto;
   line-height: 1;
 }
 
@@ -6557,259 +6561,6 @@ a.thumbnail.active {
   text-align: center !important;
 }
 
-.header-top {
-  background-color: #0f5392;
-  line-height: 39px;
-}
-
-.header-top-dropdown {
-  float: right;
-  text-align: right;
-}
-
-.group-link {
-  position: relative;
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.header-login {
-  float: right;
-  text-align: right;
-}
-
-.seperator {
-  color: #fff;
-}
-
-.group-login > a > img {
-  position: relative;
-  top: 7px;
-  padding-right: 2px;
-  vertical-align: baseline;
-}
-
-.group-login {
-  position: relative;
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.group-link > a {
-  display: block;
-  margin: 0;
-  font-size: 12px;
-  color: #fff;
-  text-align: center;
-  text-transform: uppercase;
-  min-width: 110px;
-  background-color: transparent;
-  -o-box-shadow: none !important;
-  -webkit-box-shadow: none !important;
-  box-shadow: none !important;
-}
-
-.group-login > a {
-  padding: 8px 10px;
-  margin: 0;
-  font-size: 12px;
-  color: #fff;
-  text-align: center;
-  text-transform: uppercase;
-  min-width: 0;
-  background-color: transparent;
-  -o-box-shadow: none !important;
-  -webkit-box-shadow: none !important;
-  box-shadow: none !important;
-  text-decoration: none;
-}
-
-.top-menu {
-  background: #0f5392;
-  color: #fff;
-  font-weight: 400;
-  height: 35px;
-  font-size: 12px;
-  line-height: 18px;
-  position: fixed;
-  text-transform: uppercase;
-  top: 0;
-  right: 0;
-  width: 100%;
-  z-index: 99999999;
-}
-
-.top_font_normal {
-  text-transform: none !important;
-  font-size: 12px;
-}
-
-@media (max-width: 768px) {
-  .top_font_normal {
-    font-size: 11px;
-  }
-}
-
-.logo {
-  position: relative;
-  background: url(../img/logo.png?v=1) no-repeat;
-  height: 80px;
-  display: block;
-  width: 200px;
-  margin-bottom: 15px;
-  float: left;
-}
-
-#top {
-  background: #00315f;
-  padding-top: 19px;
-}
-
-.headbanner {
-  height: 75px;
-  width: 610px;
-  float: right;
-  margin-top: 5px;
-}
-
-.logo .slag {
-  position: absolute;
-  color: #fff;
-  font-size: 22px;
-  font-weight: 300;
-  text-transform: uppercase;
-  bottom: 15px;
-  top: 30px;
-  left: 100%;
-  padding-left: 10px;
-  white-space: nowrap;
-  font-stretch: expanded;
-}
-
-#mainmenu {
-  background: #fff;
-  border-bottom: 2px solid #eeeeee;
-}
-
-.mainmenu ul {
-  margin-bottom: 0;
-  list-style-type: none;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-.mainmenu ul > li {
-  float: left;
-}
-
-.mainmenu ul li:first-child {
-  border-left: 1px solid #eeeeee;
-}
-
-.mainmenu ul li {
-  border-right: 1px solid #eeeeee;
-}
-
-.mainmenu li {
-  display: block;
-  position: relative;
-  -webkit-transition: all 300ms linear;
-  transition: all 300ms linear;
-}
-
-.mainmenu li a {
-  display: block;
-  position: relative;
-  color: #111111;
-  font-size: 14px;
-  font-weight: 700;
-  z-index: 102;
-  text-transform: uppercase;
-  text-decoration: none;
-  cursor: hand;
-  padding: 19px 25px 0;
-  height: 56px;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-}
-
-.mainmenu li a:hover {
-  color: #fff;
-  background-color: #0f5392;
-}
-
-.search-box {
-  float: right;
-  min-width: 280px;
-  margin-top: 0px;
-}
-
-.search-bar {
-  position: relative;
-  margin-bottom: 0;
-}
-
-#search-control {
-  /* box-shadow: inset 0 2px 3px rgba(0, 0, 0, .12); */
-  border-color: #f1f1f1;
-  background-color: #ffffff;
-  border-radius: 0;
-  background: #fcfcfc;
-  height: 56px;
-  color: #666666;
-  display: block;
-  width: 100%;
-  position: relative;
-  padding-right: 42.5px !important;
-  padding: 6px 12px;
-  font-size: 14px;
-  line-height: 1.42857143;
-  border: 1px solid #fff;
-  border-top: none;
-  -webkit-appearance: none;
-  -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
-  transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
-  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
-}
-
-.search-control-box {
-  font-size: 14px;
-  width: 40px;
-  height: 40px;
-  line-height: 56px !important;
-  top: 0;
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: 2;
-  display: block;
-  text-align: center;
-}
-
-@media (max-width: 768px) {
-  .mainmenu {
-    text-align: center;
-  }
-  .mainmenu ul {
-    display: table;
-    float: none;
-    margin: 0 auto;
-  }
-  .mainmenu ul li a {
-    padding: 7px 7px 0;
-    height: 25px;
-    font-size: 10px;
-  }
-  #profile-menu {
-    text-align: center;
-  }
-}
-
 #wrapper {
   position: relative;
 }
@@ -7057,5 +6808,45 @@ h1.username {
 
 .vip_userdesc {
   padding-top: 16px;
+}
+
+.m10 {
+  margin-bottom: 10px;
+}
+
+.m20 {
+  margin-bottom: 20px;
+}
+
+.m30 {
+  margin-bottom: 30px;
+}
+
+.mt10 {
+  margin-top: 10px;
+}
+
+.mt20 {
+  margin-top: 20px;
+}
+
+.mt30 {
+  margin-top: 30px;
+}
+
+.mt40 {
+  margin-top: 40px;
+}
+
+.mt50 {
+  margin-top: 50px;
+}
+
+.mt60 {
+  margin-top: 60px;
+}
+
+.pts {
+  font-family: 'PT Sans Narrow';
 }
 /*# sourceMappingURL=main.css.map */
