--- a/assets/vip76/css/custom.css
+++ b/assets/vip76/css/custom.css
@@ -1,3 +1,27 @@
+h1 {
+  font-size: 40px;
+}
+
+h2 {
+  font-size: 36px;
+}
+
+h3 {
+  font-size: 28px;
+}
+
+h4 {
+  font-size: 24px;
+}
+
+h5 {
+  font-size: 22px;
+}
+
+h6 {
+  font-size: 16px;
+}
+
 .topmstatus {
   background: #0f5392;
   color: #fff;
@@ -214,5 +238,481 @@
   #profile-menu {
     text-align: center;
   }
+}
+
+/**** PROFILE MENU ******/
+#wrapper {
+  position: relative;
+}
+
+#profile-banner {
+  min-height: 248px;
+  background: url(../img/cloud.png) no-repeat;
+}
+
+#profile-banner .profile-wrapper {
+  position: absolute;
+  width: 100%;
+  top: 0;
+}
+
+#soymbo img {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 34px;
+  display: block;
+}
+
+#org_title > h2 {
+  color: #242424;
+  font-size: 30px;
+  font-weight: 600;
+  margin-top: 10px;
+}
+
+/* PROFILE MENU */
+#profile-menu {
+  background-color: #0f5392;
+}
+
+#profile-menu .pro-menu {
+  margin: 0 auto;
+  display: table;
+  table-layout: fixed;
+}
+
+#profile-menu .pro-menu ul {
+  margin-bottom: 0;
+  list-style-type: none;
+}
+
+#profile-menu .pro-menu ul > li {
+  float: left;
+}
+
+#profile-menu .pro-menu li {
+  display: inline-block;
+  border-right: solid 1px #fff;
+  -webkit-transition: all 300ms linear;
+  transition: all 300ms linear;
+}
+
+#profile-menu .pro-menu li a {
+  display: block;
+  color: #fff;
+  text-align: center;
+  font-size: 18px;
+  font-style: normal;
+  text-transform: uppercase;
+  text-decoration: none;
+  cursor: hand;
+  width: 100%;
+  height: 100%;
+  padding: 17px 25px 0;
+  height: 54px;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+}
+
+#profile-menu .pro-menu li a:hover {
+  background-color: #00315f;
+  text-shadow: 1px 0 .02px #fff, 1px 0 .02px #fff;
+}
+
+#profile-menu .pro-menu li:first-child {
+  border-left: solid 1px #fff;
+}
+
+@media (max-width: 768px) {
+  .pro-menu ul {
+    display: table;
+    float: none;
+    margin: 0 auto;
+  }
+  #profile-menu .pro-menu li a {
+    font-size: 10px;
+    padding: 7px 7px 0;
+    height: 25px;
+  }
+}
+
+/* /PROFILE MENU */
+/* SUB MENU START */
+#profile-submenu {
+  background-color: #fff;
+  border-bottom: 1px solid #c42026;
+  margin-bottom: 60px;
+}
+
+#profile-submenu .sub-menu {
+  float: none;
+  margin: 0 auto;
+  display: table;
+  table-layout: fixed;
+}
+
+#profile-submenu .sub-menu ul {
+  overflow: hidden;
+  margin-bottom: 0;
+  list-style-type: none;
+  float: left;
+}
+
+#profile-submenu .sub-menu li {
+  display: inline-block;
+  border-right: solid 1px #ececec;
+  margin-right: -3px;
+  -webkit-transition: all 300ms linear;
+  transition: all 300ms linear;
+}
+
+#profile-submenu .sub-menu li a {
+  color: #24252f;
+  font-size: 14px;
+  font-weight: 500;
+  text-transform: uppercase;
+  text-decoration: none;
+  cursor: hand;
+  width: 100%;
+  height: 100%;
+  display: block;
+  padding: 5px 25px 0;
+  height: 28px;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+}
+
+#profile-submenu .sub-menu li a:hover {
+  background-color: #0f5392;
+  color: #fff;
+}
+
+#profile-submenu .sub-menu li:first-child {
+  border-left: solid 1px #fff;
+}
+
+@media (max-width: 768px) {
+  .sub-menu ul {
+    display: table;
+    float: none;
+    margin: 0 auto;
+  }
+  #profile-submenu .sub-menu li a {
+    font-size: 9px;
+    padding: 5px 5px 0;
+    height: 20px;
+  }
+}
+
+.nav-button {
+  position: relative;
+  width: 400px;
+  margin: 0 auto;
+}
+
+.nav-button .prev-btn {
+  position: absolute;
+  bottom: 0;
+  font-size: 20px;
+  color: #c42026;
+  cursor: pointer;
+}
+
+.nav-button .next-btn {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  font-size: 20px;
+  cursor: pointer;
+  color: #c42026;
+}
+
+#history-slider {
+  position: relative;
+  overflow: hidden;
+  width: 350px;
+  margin: 0 auto;
+}
+
+#owl-demo .owl-item {
+  height: 40px;
+  text-align: left;
+  width: 70px;
+  vertical-align: bottom;
+}
+
+#owl-demo .owl-item .item {
+  color: #242424;
+  display: block;
+  padding: 0;
+  margin: 0 auto;
+  text-decoration: none;
+  text-align: center;
+  cursor: pointer;
+}
+
+#owl-demo .owl-item, #owl-demo .owl-item .link > h2 {
+  font-size: 24px !important;
+  font-weight: 500;
+  padding-top: 5px;
+  margin: 0 auto;
+  display: inline;
+}
+
+#owl-demo .owl-item .clicked > h2 {
+  font-size: 32px !important;
+  font-weight: 600;
+  color: #c42026;
+}
+
+#owl-demo.item h2 {
+  font-size: 24px;
+  display: block;
+  cursor: pointer;
+  margin: 5px;
+  color: #c42026;
+  border-radius: 3px;
+  text-align: center;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+}
+
+#owl-demo.item h2:hover {
+  font-size: 32px !important;
+  font-weight: 600;
+  left: 20%;
+  color: #c42026;
+  text-decoration: none !important;
+  -webkit-transition: all 100ms linear;
+  transition: all 100ms linear;
+}
+
+#owl-demo .owl-stage-outer {
+  margin-left: 20px;
+}
+
+.owl-item > .item .link .clicked a {
+  font-size: 34px !important;
+  font-weight: 600;
+}
+
+.profile-news-container {
+  margin-left: 22px;
+  background: #484d5b;
+  position: relative;
+  overflow: hidden;
+  height: 930px;
+  margin: 0px auto;
+  -ms-overflow-style: none;
+}
+
+.profile-news-container .header {
+  background: #0f5392;
+  color: #fff;
+  padding: 10px 0;
+  -webkit-box-shadow: 0px 0px 60px #0f5392 inset;
+  box-shadow: 0px 0px 60px #0f5392 inset;
+  border-left: 4px solid #00315f;
+}
+
+.profile-news-container .header > h3 {
+  padding-left: 30px;
+  font-size: 18px;
+  text-transform: uppercase;
+}
+
+.profile-news-container .footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background: #484d5b;
+  text-align: center;
+  padding-top: 5px;
+}
+
+.profile-news-container .footer > button {
+  width: 55px;
+  color: #fff;
+  background: #c42026;
+  border: 1px solid #c42026;
+}
+
+.profile-news-container .new-news-list {
+  font-family: "PT Sans Narrow", sans-serif !important;
+  text-transform: uppercase;
+  color: #fff;
+  padding: 0 15px 0 30px;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  -ms-overflow-style: none;
+}
+
+.profile-news-container .new-news-list .list {
+  margin-top: 30px;
+  padding-bottom: 25px;
+  border-bottom: 1px solid #797c85;
+}
+
+.profile-news-container .new-news-list .list > a {
+  text-decoration: none;
+}
+
+.profile-news-container .new-news-list .list .news {
+  padding: 15px 0 0 15px;
+  display: inline-block;
+  vertical-align: middle;
+  width: 200px;
+  font-weight: 600;
+}
+
+.profile-news-container .new-news-list .list .news > a {
+  color: #fff;
+}
+
+.profile-news-container .new-news-list .list .date {
+  font-family: 'Montserrat';
+  padding-top: 15px;
+  display: block;
+}
+
+.profile-news-container .new-news-list::-webkit-scrollbar {
+  display: none;
+}
+
+.popular-head {
+  position: relative;
+  width: 100%;
+}
+
+.popular-head .top_title {
+  margin: 20px 0 0 25px;
+  padding: 0 5px;
+  font-size: 18px;
+  text-transform: uppercase;
+  color: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #c42026;
+}
+
+.popular-head .maincontent {
+  width: 100%;
+  position: absolute;
+  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorStr=#00000000, endColorStr=#DD000000);
+  background-color: transparent;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(0, 0, 0, 0.8)));
+  background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.8));
+  background-position-y: -1px;
+  bottom: -1px;
+}
+
+.popular-head .maincontent h1 {
+  margin-left: 22px;
+}
+
+.popular-head .maincontent h1 > a {
+  font-family: "PT Sans Narrow", sans-serif !important;
+  color: #fff;
+}
+
+.popular-head .maincontent h1 > a:hover {
+  text-decoration: none;
+  color: #c42026;
+}
+
+.popular-head .maincontent .title-bottom {
+  color: #fff;
+  margin: 25px 0 20px 22px;
+}
+
+.headtitle {
+  display: block;
+  padding-bottom: 7px;
+  margin: 0 0 10px 0;
+  border-bottom: 2px solid #c42026;
+}
+
+.headtitle h4 {
+  text-transform: uppercase;
+  font-size: 24px;
+  color: #0f5392;
+  margin: 0;
+  padding: 0;
+}
+
+.special-work {
+  margin-top: 70px;
+}
+
+.special-work .headline {
+  display: block;
+  padding-bottom: 10px;
+  margin: 0 0 10px 0;
+  border-bottom: 2px solid #c42026;
+}
+
+.special-work .headline h4 {
+  text-transform: uppercase;
+  font-size: 24px;
+  color: #0f5392;
+  margin: 0;
+  padding: 0;
+}
+
+.special-work .special-heading {
+  color: #c42026;
+}
+
+.special-work .special-heading::first-letter {
+  font-weight: 700;
+}
+
+.special-work .special-slider {
+  margin-top: 30px;
+}
+
+.special-work .special-slider .item {
+  overflow: hidden;
+}
+
+.special-work .special-slider .item img {
+  float: left;
+}
+
+.special-work .special-slider .item .item-body {
+  background: #fcfcfc;
+  float: left;
+  width: 360px;
+  min-height: 360px;
+  border-bottom: 1px solid #0f5392;
+}
+
+.special-work .special-slider .item .item-body .wrapper {
+  padding-left: 30px;
+  padding-right: 50px;
+}
+
+.special-work .special-slider .item .item-body .wrapper .tag {
+  margin-top: 36px;
+  font-size: 14px;
+  color: #24252f;
+  font-weight: 600;
+}
+
+.special-work .special-slider .item .item-body .wrapper > h3 {
+  font-family: "PT Sans Narrow", sans-serif !important;
+  color: #24252f;
+  text-align: left;
+  max-width: 210px;
+  word-wrap: normal;
+}
+
+.special-work .special-slider .item .item-body .wrapper > p {
+  font-size: 12px;
+}
+
+.inner > section {
+  margin-top: 80px;
 }
 /*# sourceMappingURL=custom.css.map */
